# streamingPlatform

./: .~lock.netflix.csv#  CMakeLists.txt  a.out  main.cpp
source/: CMakeLists.txt  converter.py  jsoncpp.cpp  netflix.json  platform.cpp  platform.h  test2.cpp  video.h
source/json/: json-forwards.h  json.h
